# DicomNode

./: .gitignore  .pylintrc  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  README.rst  profile_import.py  pyproject.toml  runPerformance.py  runtests.py  runtests.sh  setup.cfg  setup.py
cpp_src/: CMakeLists.txt  python_entry_point.cpp  python_interpolation.cpp  python_interpolation.hpp  utils.hpp
cpp_src/core/: core.hpp  declarations.hpp  error.hpp
cpp_src/core/data_structures/: data_structures.hpp  extent.hpp  index.hpp  point.hpp  space.hpp  square_matrix.hpp
cpp_src/tests/: CMakeLists.txt  tests_initiator.cpp  tests_interpolation.cpp
cuda_src/: CMakeLists.txt  README.md  python_entry_point.cu  test_initiator.cu
cuda_src/gpu_code/: bounding_box.cuh  center_of_gravity.cuh  dicom_node_gpu.cuh  labeling.cuh  linear_interpolation.cuh  map.cuh  map_reduce.cuh  mirror.cuh  registration.cuh
cuda_src/gpu_code/core/: concepts.cuh  constants.cuh  core.cuh  cuda_management.cuh  declarations.cuh  error.cuh  grid.cuh  lin_alg.cuh  memory.cuh  shuffle.cuh
cuda_src/gpu_code/core/data_structures/: affine.cuh  data_structures.cuh  extent.cuh  flat_index.cuh  image.cuh  index.cuh  point.cuh  space.cuh  square_matrix.cuh  texture.cuh  volume.cuh
cuda_src/python/: python_bounding_box.cu  python_center_of_gravity.cu  python_center_of_gravity.cuh  python_constants.cuh  python_cuda_management.cu  python_cuda_management.cuh  python_interpolation.cu  python_interpolation.cuh  python_labeling.cu  python_labeling.cuh  python_mirror.cuh  python_registration.cu  python_registration.cuh  utilities.cu  utilities.cuh
cuda_src/tests/: CMakeLists.txt  center_of_gravity_tests.cu  datastructure_test.cu  indexing_test.cu  interpolation_tests.cu  label_tests.cu  lin_alg_test.cu  scan_test.cu  space_test.cu  test_data.cuh  test_helper.cuh  utilities_test.cu
docs/: ConfigurationGuide.md  CreatePipeline.md  DicomForDummies.md  build_docs.sh  requirements.txt
docs/source/: build_docs.sh  conf.py  dicomnode.bin.rst  dicomnode.constants.rst  dicomnode.data_structures.rst  dicomnode.datastructures.rst  dicomnode.dicom.blueprints.rst  dicomnode.dicom.rst  dicomnode.lib.rst  dicomnode.math.rst  dicomnode.report.latex_components.rst  dicomnode.report.plot.rst  dicomnode.report.rst  dicomnode.rst  dicomnode.server.factories.rst  dicomnode.server.rst  dicomnode.tools.rst  index.rst  modules.rst
exampels/: anomyzationNode.py  dicomNodeExampel.py  storeNode.py
examples/: anomyzationNode.py  averageNode.py  external_rt_input.py  mogsenStoreNode.py  plusOneNode.py  storeNode.py  total_segmentator_node.py
low_level_src/: CMakeLists.txt  README.md  constants.cu  low_level.cpp  low_level_cuda.cu  low_level_cuda.cuh  main.cu  python_entry_point.cu  test_initiator.cu
low_level_src/classes/: image.cu
low_level_src/concepts/: binary_operator.cu
low_level_src/gpu_code/: bounding_box.cu  bounding_box.cuh  cuda_management.cu  cuda_management.cuh  dicom_node_gpu.cu  dicom_node_gpu.cuh  indexing.cu  label.cuh  labeling.cuh  linear_interpolation.cuh  map.cu  map_reduce.cu  map_reduce.cuh  mirror.cu  mirror.cuh  numpy_array.cu  playground.cu  scan_reduce.cu  tricubic_interpolation.cu
low_level_src/python/: python_bounding_box.cu  python_bounding_box.cuh  python_constants.cuh  python_cuda_management.cu  python_cuda_management.cuh  python_interpolation.cu  python_labeling.cu  python_mirror.cu  utilities.cu  utilities.cuh
low_level_src/tests/: bounding_box_test.cu  cuda_management_tests.cu  indexing_test.cu  interpolation_tests.cu  label_tests.cu  lin_alg_test.cu  scan_test.cu  space_test.cu
src/dicomnode/: __init__.py  config.py  constants.py
tests/: __init__.py  helpers.py  storage_endpoint.py  tests___init__.py  tests_circular_imports.py  tests_data_structures_image_tree.py  tests_dicom.py  tests_dicom_anonymization.py  tests_dicom_dicom_factory.py  tests_dicom_dimse.py  tests_dicom_lazy_dataset.py  tests_dicom_nifti.py  tests_dicom_numpy_factory.py  tests_init.py  tests_lib_anonymization.py  tests_lib_dicom.py  tests_lib_dicomFactory.py  tests_lib_dicom_factory.py  tests_lib_dimse.py  tests_lib_grinders.py  tests_lib_imageTree.py  tests_lib_image_tree.py  tests_lib_init.py  tests_lib_io.py  tests_lib_lazyDataset.py  tests_lib_nifti.py  tests_lib_numpyFactory.py  tests_lib_numpy_factory.py  tests_lib_regex.py  tests_lib_utils.py  tests_maintenance.py  tests_report.py  tests_report_generator.py  tests_report_plot.py  tests_server_abstract_pipeline.py  tests_server_grinders.py  tests_server_input.py  tests_server_nodes.py  tests_server_output.py  tests_server_pipelineTree.py
tests/datastructures/: __init__.py  tests_defaulting_dict.py  tests_optional.py
tests/dicom/: __init__.py  tests_dicom_factory.py  tests_nifti.py  tests_rt_struct.py  tests_series.py
tests/dicom_math/: __init__.py  tests_mirror.py
tests/helpers/: __init__.py  config.py  dicomnode_test_case.py  dicomnode_test_suite.py  inputs.py  storage_endpoint.py  test_data.py
tests/lib/: __init__.py  tests_config_parser.py  tests_lib_logging.py  tests_logging.py  tests_parallism.py  tests_validators.py
tests/math_/: __init__.py  tests_affine.py  tests_bounding_box.py  tests_cuda_labeling.py  tests_extent.py  tests_gpu_helpers.py  tests_image.py  tests_mirror.py  tests_python_interpolation.py  tests_registration.py  tests_space.py  tests_types.py
tests/server/: __init__.py  tests_init.py  tests_input.py  tests_input_container.py  tests_maintenance.py  tests_nodes.py  tests_nodes_abstract_queued_pipeline.py  tests_patient_node.py  tests_pipeline_storage.py  tests_processing.py
tests/tests_end2end/: tests_concurency.py  tests_file_node.py  tests_historic_node.py  tests_log_from_another_process.py  (+6 more)
tools/: __init__.py  cmake.py
tutorials/: ClassOverview.md  ConfigurationGuide.md  ConfigurationOverview.md  CreatePipeline.md  PythonSoftwareEngineering.md  class_overview.md  configuration_overview.md  configuring_a_pipeline.md  create_a_dicom_series.md  create_a_pipeline.md  dicom_for_dummies.md  python_software_engineering.md
(+176 files in other folders)
