[metadata]
name = dicomnode

[options]
package_dir=
  =src
packages=find:

[options.packages.find]
where=src

[coverage:report]
  skip_covered=True
  skip_empty=True
  show_missing=True
#  omit = # breaks coverage-lcov
#    tools/*
#    tests/*
#    venv/*
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod

[coverage:run]